--- a/css/index.css
+++ b/css/index.css
@@ -132,7 +132,12 @@
     width: 200px;
     margin-right: 30px; 
   }
-  
+  .iconContent:hover{
+    background-color: rgb(241, 233, 233);
+    height: 190px;
+    padding-top: 15px;
+    border-radius: 8px;
+}
   .html5 {
     max-width: 84.21px;
     min-height: 100px;
